src/testData/commands/errors/parent/test_allowDMs.ts
import { defineCommand } from "../../../../index.js";

export default defineCommand({
    key: "test_allowDMs",
    allowDMs: true,
    handler: () => { }
});
